--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,13 @@
+/* This is to set the style of the overall body element where all our elements go */
+body {
+	font-family: 'Sedgwick Ave Display', cursive;
+	font-size: 14px;
+	background-image: url("https://images4.alphacoders.com/600/thumb-1920-600528.png");
+	background-repeat: no-repeat;
+	background-size: cover;
+}
 
+/* Put your signature down below and style how you want! */
 #Kevin {
 	color: blue;
 }
@@ -6,5 +15,48 @@
 #Anthony {
 	color: #884343;
 	font-style: italic;
+	font-weight: bold;
+}
+
+/* This is the area to style certain elements on the page. To style certain tags of html, just use their 
+letter, for example: 
+
+	HTML : <p> Hello </p> 
+	CSS: p {
+			color: pink;
+		}
+
+Or in order to access certain ID's, just put a '#' in front of the ID you gave it. (ie => #hello)
+Or in order to access certain classes, just put a '.' in front of the class you gave it. (ie => .hello)
+*/
+.header {
+	margin-top: 35vh;
+}
+
+h1 {
+	color: #000;
+	font-style: italic;
+}
+
+hr {
+	background-color: rgb(0, 0, 255);
+	margin-left: 25vw;
+	margin-right: 25vw;
+}
+
+#popup, #remove {
+	background-color: #000;
+	color: #fff;
+}
+
+#popup:hover {
+	background-color: cyan;
+	color: #000;
+	font-weight: bold;
+}
+
+#remove:hover {
+	background-color: red;
+	color: #000;
 	font-weight: bold;
 }
