ill have you know

--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,8 @@ body {
 
 /* Put your signature down below and style how you want! */
 #Kevin {
-	color: pink;
+	color: blue;
+	font-size: 10px;
 }
 
 #Anthony {
