changing it back to original

--- a/styles.css
+++ b/styles.css
@@ -10,11 +10,11 @@ body {
 /* Put your signature down below and style how you want! */
 #Kevin {
 	color: blue;
-	font-size: 10px;
+	font-size: 16px;
 }
 
 #Anthony {
-	color: pink;
+	color: #884343;
 	font-style: italic;
 	font-weight: bold;
 }
